--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,8 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 Imports:
+    purrr,
+    rlang,
     shiny
 Suggests: 
     shinytest2,
