Add basic example

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,10 @@ Imports:
     rlang,
     shiny
 Suggests: 
+    knitr,
+    rmarkdown,
     shinytest2,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
+VignetteBuilder: knitr
