--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,22 @@
 Package: shiny.destroy
 Type: Package
-Title: Use dynamic, destroyable modules in 'Shiny'
+Title: Create destroyable modules in 'Shiny'
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Authors@R: person("Ashley", "Baldry", email = "arbaldry91@gmail.com", role = c("aut", "cre"))
+Description: A way to fully remove dynamic 'Shiny' modules from a session.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports:
     purrr,
     rlang,
     shiny
-Suggests: 
+Suggests:
+    bslib,
+    knitr,
+    rmarkdown,
     shinytest2,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
+VignetteBuilder: knitr
