Updating as found issue with inputs not being detected in output calls

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,6 @@
 export(destroyModule)
 export(makeModuleServerDestroyable)
 export(makeModuleUIDestroyable)
+export(removeInput)
 export(runDestroyExample)
 import(shiny)
