Add removeOutput function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,6 @@ export(destroyModule)
 export(makeModuleServerDestroyable)
 export(makeModuleUIDestroyable)
 export(removeInput)
+export(removeOutput)
 export(runDestroyExample)
 import(shiny)
