--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,9 @@ Suggests:
     knitr,
     rmarkdown,
     shinytest2,
+    spelling,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Language: en-GB
 RoxygenNote: 7.3.2
 VignetteBuilder: knitr
