Make description title title case

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: shiny.destroy
 Type: Package
-Title: Create destroyable modules in 'Shiny'
+Title: Create Destroyable Modules in 'Shiny'
 Version: 0.1.0
 Authors@R: person("Ashley", "Baldry", email = "arbaldry91@gmail.com", role = c("aut", "cre"))
 Description: A way to fully remove dynamic 'Shiny' modules from a session.
