Add more output docs

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,9 @@ Type: Package
 Title: Create Destroyable Modules in 'Shiny'
 Version: 0.1.0
 Authors@R: person("Ashley", "Baldry", email = "arbaldry91@gmail.com", role = c("aut", "cre"))
-Description: A way to fully remove dynamic 'Shiny' modules from a session.
+Description: This package enables the complete removal of various 'Shiny' components, such
+    as inputs, outputs and modules. It also aids in the removal of observers that have been 
+    created in dynmically created modules.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
